# whales

OLD/whales/: README.md  pyproject.toml  virtual_screening_pipeline.ipynb
OLD/whales/src/whales/: __init__.py  chem_tools.py  do_whales.py  lcm.py  utils.py
code/: .fuse_hidden00013bae0000027c  ChemTools.py  chem_tools.py  do_whales.py  lcm.py  mol_properties.py  virtual_screening_pipeline.ipynb
